--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "quick_arg_parser"]
 	path = quick_arg_parser
 	url = https://github.com/Dugy/quick_arg_parser.git
+[submodule "tinydngloader"]
+	path = tinydngloader
+	url = https://github.com/syoyo/tinydngloader.git
