--- a/vc2017/zraw-decoder.vcxproj
+++ b/vc2017/zraw-decoder.vcxproj
@@ -88,6 +88,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)..\zraw-decoder-lib\include;$(SolutionDir)..\tinydngloader;$(SolutionDir)..\quick_arg_parser;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <WholeProgramOptimization>
+      </WholeProgramOptimization>
     </ClCompile>
     <PreBuildEvent>
       <Command>git submodule update --init
@@ -97,6 +100,8 @@
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)..\zraw-decoder-lib\build;$(OPENSSL_INSTALL_DIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzraw.lib;libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <LinkTimeCodeGeneration>
+      </LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
       <Command>SET build_path=$(SolutionDir)..\build
@@ -112,6 +117,9 @@ copy /Y "$(OutDir)$(TargetName)$(TargetExt)" "%build_path%\"
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)..\zraw-decoder-lib\include;$(SolutionDir)..\tinydngloader;$(SolutionDir)..\quick_arg_parser;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <WholeProgramOptimization>
+      </WholeProgramOptimization>
     </ClCompile>
     <PreBuildEvent>
       <Command>git submodule update --init
@@ -121,6 +129,8 @@ copy /Y "$(OutDir)$(TargetName)$(TargetExt)" "%build_path%\"
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)..\zraw-decoder-lib\build;$(OPENSSL_INSTALL_DIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzraw.lib;libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <LinkTimeCodeGeneration>
+      </LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
       <Command>SET build_path=$(SolutionDir)..\build
@@ -138,6 +148,7 @@ copy /Y "$(OutDir)$(TargetName)$(TargetExt)" "%build_path%\"
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)..\zraw-decoder-lib\include;$(SolutionDir)..\tinydngloader;$(SolutionDir)..\quick_arg_parser;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -166,6 +177,7 @@ copy /Y "$(OutDir)$(TargetName)$(TargetExt)" "%build_path%\"
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)..\zraw-decoder-lib\include;$(SolutionDir)..\tinydngloader;$(SolutionDir)..\quick_arg_parser;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
